--- a/app/views/csi/surveys/_show_subjects.html.erb
+++ b/app/views/csi/surveys/_show_subjects.html.erb
@@ -50,7 +50,7 @@
            </td>
            <td>
              <div>
-               <%=data[:prompt]%>
+               <%=data[:description]%>
              </div>
            </td>
            <td>
