--- a/app/views/csi/surveys/index.html.erb
+++ b/app/views/csi/surveys/index.html.erb
@@ -38,8 +38,8 @@
                    {:key=>"title",:label=>t(:label_csi_survey_title),:searchable=>true},
                    {:key=>"joined_count",:label=>t(:label_csi_survey_joined_count),:formatter=>"Y.irm.template", :width=>"80px"},
                    {:key=>"person_count",:label=>t(:label_csi_survey_person_count),:formatter=>"Y.irm.template", :width=>"80px"},
-                   {:key=>"published_at",:label=>t(:label_csi_survey_created_at), :width=>"80px"},
-                   {:key=>"allow_author_only", :hidden => true}],
+                   {:key=>"created_at",:label=>t(:label_csi_survey_created_at), :width=>"80px"},
+                   {:key=>"publish_result_flag", :hidden => true}],
                    {:paginator_box=>"surveryPaginator",:search_box=>"permissionsSearchBox"})%>
         <div id="surveryPaginator"></div>
       </div>
