--- a/app/views/csi/survey_responses/_string_field.html.erb
+++ b/app/views/csi/survey_responses/_string_field.html.erb
@@ -1,9 +1,11 @@
 <tr>
-   <td class="dataCol">
+   <td class="surveydataCol">
+        <span class="prompt"><%=h subject.description %></span>
+        <br/>
         <%= text_field_tag "result[#{subject.id}]", nil, :size => 35 %>
         <span id="id_<%=subject.id%>" style="color:#FF0000;"></span>
         <br />
-        <span class="prompt"><%=h subject.prompt %></span>
+
    </td>
    <td class="labelCol empty"></td>
    <td class="dataCol empty"></td>
