fixed: 修正在顶层搜索，打开搜索选项窗口时，将焦点设在窗口中的文本框

--- a/app/views/irm/search/_box.html.erb
+++ b/app/views/irm/search/_box.html.erb
@@ -139,6 +139,7 @@ function headerSearchOptionsBoxShow(){
     $("#phSearchInput_autoCompleteBoxId").show();
     $(".headerSearchLeftRoundedCorner").addClass("active");
     $(".searchBoxClearContainer").addClass("active");
+    $("#phSearchOptionInput").focus();
 }
 
 function headerSearchOptionsBoxHide(){
