修正调查问卷的radio选项在用户选择其他选项时的问题

--- a/app/views/csi/survey_responses/_subjects.html.erb
+++ b/app/views/csi/survey_responses/_subjects.html.erb
@@ -39,9 +39,18 @@
           var requiredSubjectIds = [];
 
           for(var i=0;i<requiredFields.length;i++){
-               if(["string","radio","drop","text"].indexOf(requiredFields[i].input_type)>-1&&(!result[requiredFields[i].id]||result[requiredFields[i].id].length<1)){
+               if(["string","drop","text"].indexOf(requiredFields[i].input_type)>-1&&(!result[requiredFields[i].id]||result[requiredFields[i].id].length<1)){
                    checked = false;
                    requiredSubjectIds.push({"id":requiredFields[i].id, "page":requiredFields[i].page});
+               }else if(["radio"].indexOf(requiredFields[i].input_type)>-1){
+                   if(!result[requiredFields[i].id]){
+                       checked = false;
+                       requiredSubjectIds.push({"id":requiredFields[i].id, "page":requiredFields[i].page});
+                   }else if(result[requiredFields[i].id]=='_other'&&result["other"][requiredFields[i].id].length<1){
+                       checked = false;
+                       requiredSubjectIds.push({"id":requiredFields[i].id, "page":requiredFields[i].page});
+                   }
+
                }else if(["check"].indexOf(requiredFields[i].input_type)>-1){
                    if(!result[requiredFields[i].id]){
                        checked = false;
