修正调查问卷的radio选项在用户选择其他选项时的问题

--- a/app/views/csi/survey_responses/_subjects.html.erb
+++ b/app/views/csi/survey_responses/_subjects.html.erb
@@ -68,6 +68,8 @@
                   $("#subjectHeader_"+requiredSubjectIds[i].id).addClass("requiredBlock");
               }
               goToPage(parseInt(requiredSubjectIds[0].page));
+              var top = $($("#subjectHeader_"+requiredSubjectIds[0].id)).position().top;
+              $(window).scrollTop( top );
               alert($.i18n("SurveyRequiredError"));
           }
           return checked;
