--- a/app/views/icm/incident_requests/_customer_list.html.erb
+++ b/app/views/icm/incident_requests/_customer_list.html.erb
@@ -24,9 +24,9 @@
                        { :key => "reply_flag",:hidden=>true },
                        { :key => "close_flag",:hidden=>true },
                        { :key => "kb_flag",:hidden=>true },
-                       { :key => "organization_id_label", :label => t(:label_icm_incident_request_organization)},
-                       { :key => "last_response_date", :label => t(:label_icm_incident_request_last_date),:width=>"180px" },
-                       { :key => "external_system_id_label", :label => t(:label_irm_external_system),:width=>"180px" }
+                       { :key => "organization_id_label", :label => t(:label_icm_incident_request_organization), :width =>"180px"},
+                       { :key => "last_response_date", :label => t(:label_icm_incident_request_last_date),:width=>"140px" },
+                       { :key => "external_system_id_label", :label => t(:label_irm_external_system),:width=>"140px" }
                        ],{:export_data=>"#incidentRequestExport",:not_load=>true,:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:html=>true,:view_filter=>true})%>
       <div id="incidentRequestsPaginatorBox"></div>
 </div>
