--- a/app/views/irm/search/_box.html.erb
+++ b/app/views/irm/search/_box.html.erb
@@ -88,7 +88,7 @@
 </script>
 <script type="text/javascript">
 $(document).ready(function(){
-    $("#headerSearchOptionsLink").colorbox({inline:true, opacity:0.55, title:"<%= t(:search_options) %>"});
+    $("#headerSearchOptionsLink").colorbox({inline:true, opacity:0.55, title:"<%= t(:search_options) %>", speed: 0});
     $("#searchOptionCancel").click(function(e){
         $.colorbox.close();
     });
