fixed: 修正在IPAD下，事故单首页列表中的 最后回复日期仍然为粗略时间的问题

--- a/app/views/icm/incident_requests/get_help_desk_data.html.erb
+++ b/app/views/icm/incident_requests/get_help_desk_data.html.erb
@@ -60,7 +60,7 @@
            </td>
            <td>
              <div>
-               <%=I18n.t(:ago,:message=>distance_of_time_in_words(Time.now, data[:last_request_date]))%>
+               <%= data[:last_request_date]%>
              </div>
            </td>
            <td>
