--- a/app/views/icm/incident_requests/get_data.html.erb
+++ b/app/views/icm/incident_requests/get_data.html.erb
@@ -44,7 +44,7 @@
            </td>
            <td>
              <div>
-               <%=I18n.t(:ago,:message=>distance_of_time_in_words(Time.now, data[:last_response_date]))%>
+               <%= data[:last_response_date]%>
              </div>
            </td>
            <td>
