--- a/app/views/csi/survey_responses/new.html.erb
+++ b/app/views/csi/survey_responses/new.html.erb
@@ -13,7 +13,7 @@
 
 <div id="ep" class="detail-block page-block">
     <div id="id_survey_reply">
-        <% if @survey.close? %>
+        <% unless @survey.close? %>
           <div id='errors' class='error'></div>
           <%= form_tag({:controller=>"csi/survey_responses",:action=>"create"},{:id=>"responseForm"}) do %>
              <%= hidden_params_field :survey_member_id%>
