显示调查问卷调查结果

--- a/app/views/csi/survey_results/_check_result.html.erb
+++ b/app/views/csi/survey_results/_check_result.html.erb
@@ -27,7 +27,7 @@
 <% end %>
 
 <% if Irm::Constant::SYS_YES.eql?(subject.other_input_flag) %>
-    <% other_percent = datas[:response_count]==0? 0 : (datas[:grouped_input_counts][subject.id]||0).fdiv(datas[:response_count]).round(3)*100 %>
+    <% other_percent = datas[:response_count]==0? 0 : (datas[:grouped_input_counts][subject.id]||0).fdiv(datas[:response_count])*100.round(3) %>
 <tr>
   <td>
     <div><%= t(:label_csi_survey_subjects_other) %> [<%= link_to(t(:label_csi_survey_result_show_more),{:action=>"show_input",:id=>subject.id},{:back=>true}) %>]</div>
