--- a/app/views/csi/survey_results/list.html.erb
+++ b/app/views/csi/survey_results/list.html.erb
@@ -1,4 +1,4 @@
-<%= page_title %>
+<%= common_title(:show_data=>"",:action_meaning=>t(:label_csi_survey_result_list)) %>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
