--- a/app/views/csi/survey_results/show_response.html.erb
+++ b/app/views/csi/survey_results/show_response.html.erb
@@ -1,8 +1,14 @@
 <%= common_title(:show_data=>@survey_response.survey.title,:action_meaning=>t(:label_csi_survey_result_show_response)) %>
 
-<% datas = survey_response_data(@survey_response); %>
+<% datas = survey_response_data(@survey_response);types = subject_types %>
 
 <% subject_pages = paginate_survey_subjects(@survey_response.survey_id); subjects = subject_pages.flatten%>
+
+<style type="text/css">
+  td.surveydataCol{
+    padding-left:15px;
+  }
+</style>
 
 <div id="ep" class="detail-block page-block">
     <div >
@@ -28,12 +34,12 @@
                     <% survey_subjects.each do  |subject|%>
                         <div class="pbBody lightBlueBorder noLineShow" id="subject_<%=subject.id  %>">
                           <div class="pbSubheader tertiaryPalette" id="subjectHeader_<%=subject.id  %>">
-                            <h3>
-                              <%=subject.number%>.&nbsp;<%=subject.name%>&nbsp;&nbsp;
+                              <h3><%=subject.number%>.&nbsp;<%=subject.name%>&nbsp;&nbsp;</h3>
                               <% if (Irm::Constant::SYS_YES.eql?(subject.required_flag)) %>
-                                 <span class="required_answer">(<%= t(:label_csi_survey_required_input)%>)</span>
+                                 <span class="required_answer">[<%=types[subject.input_type.to_sym]%>,<%= t(:label_csi_survey_required_input)%>]</span>
+                              <% else %>
+                                 <span class="titleSeparatingColon">[<%=types[subject.input_type.to_sym]%>]</span>
                               <% end %>
-                              <span class="titleSeparatingColon"></span></h3>
                           </div>
 
                           <div class="pbSubsection">
@@ -42,11 +48,11 @@
                                   <% (datas[subject.id]||[]).each do |option| %>
                                     <tr>
                                     <% if "OPTION".eql?(option.result_type) %>
-                                      <td><div><%= option[:option_value] %></div></td>
+                                      <td class="surveydataCol"><div><%= option[:option_value] %></div></td>
                                     <% elsif "INPUT".eql?(option.result_type)  %>
-                                      <td><div><%= option[:text_input] %></div></td>
+                                      <td class="surveydataCol"><div><%= option[:text_input] %></div></td>
                                     <% elsif "OTHER".eql?(option.result_type)  %>
-                                      <td><div><%= t(:label_csi_survey_subjects_other) %>:<%= option[:text_input] %></div></td>
+                                      <td class="surveydataCol"><div><%= t(:label_csi_survey_subjects_other) %>:<%= option[:text_input] %></div></td>
                                     <% end %>
                                     </tr>
                                   <% end %>
