--- a/app/views/irm/demo/index.html.erb
+++ b/app/views/irm/demo/index.html.erb
@@ -1,29 +1,7 @@
-<div class="listRelatedObject setupBlock">
-    <div class="bPageBlock">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"></td>
-              <td id="topButtonRow" class="pbButton">
-              </td>
-              <td class="pbHelp">
-                <div id="demoSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="demo_list" class="datatable" style="width:100%"></div>
-          <%= datatable("demo_list",{:controller => "irm/demo", :action=>"get_data",:format=>"json"},
-                        [{:key=>"id",:label=>"", :hidden => true},
-                         {:key=>"title",:label=>t(:label_irm_bulletin_title), :searchable=>true, :width =>"100px"},
-                         {:key=>"content",:label=>t(:label_irm_bulletin_content), :searchable=>true, :width =>"430px"},
-                         {:key=>"page_views",:label=>t(:label_irm_bulletin_page_views), :width => "40px"},
-                         {:key=>"published_date",:label=>t(:label_irm_bulletin_published_date),:width => "130px"}],
-                         {:paginator_box=>"demoPaginatorBox",:search_box=>"demoSearchBox"})%>
-        <div id="demoPaginatorBox"></div>
-      </div>
-    </div>
-</div>
+<% require_javascript(:video)%>
+<% require_css(:video)%>
+<video id="my_video_1" class="video-js vjs-default-skin" controls
+  preload="auto" width="640" height="264"
+  data-setup="{}">
+  <source src="<%= Irm::AttachmentVersion.query_all.where(:id => "000W00045j4tvQdpch7j84").first.url%>" type='video/mp4'>
+</video>
