--- a/app/views/skm/entry_headers/show.html.erb
+++ b/app/views/skm/entry_headers/show.html.erb
@@ -21,7 +21,7 @@
   
   <div class="pbBody lightBlueBorder  noLineShow">
         <div class="pbSubheader tertiaryPalette">
-          <h3>导航目录</h3>
+          <h3><%= t(:label_skm_navigator) %></h3>
         </div>
         <div class="pbSubsection">
           <table class="detailList" cellpadding="0" cellspacing="0" border="0">
