feature: 1.完善视频知识查看页面。 2.在视频知识的新增和编辑界面，增加验证机制

--- a/app/views/skm/entry_headers/new_step_video_upload.html.erb
+++ b/app/views/skm/entry_headers/new_step_video_upload.html.erb
@@ -56,7 +56,7 @@
                 <%= t(:description) %>
               </td>
               <td class="data2Col">
-                <%= text_area_tag :skm_video_description, nil,:cols => 40, :rows => 5 %>
+                <%= text_area_tag :skm_video_description, (@video_description if @video_description),:cols => 40, :rows => 5 %>
               </td>
             </tr>
         </tbody>
