--- a/app/views/skm/entry_headers/video_show.html.erb
+++ b/app/views/skm/entry_headers/video_show.html.erb
@@ -36,6 +36,8 @@
                     </div>
                   </td>
                 </tr>
+                <tr><td>&nbsp;</td></tr>
+                <tr><td><div align="center"><%= @video.description%></div></td></tr>
             </tbody>
           </table>
         </div>
