feature: 限制视频知识库上传类型，只接受视频文件

--- a/app/views/skm/entry_headers/new_step_video_upload.html.erb
+++ b/app/views/skm/entry_headers/new_step_video_upload.html.erb
@@ -48,7 +48,7 @@
                 <%= t(:label_skm_entry_video) %>
               </td>
               <td class="data2Col">
-                <%= file_field_tag :skm_video, :jrequired => true %>
+                <%= file_field_tag :skm_video, :jrequired => true, :accept => "video/*" %>
               </td>
             </tr>
             <tr>
