将controller固定为“home",避免默认情况下使用上下文的controller

--- a/app/views/irm/home/_my_tasks.html.erb
+++ b/app/views/irm/home/_my_tasks.html.erb
@@ -13,7 +13,7 @@
       </tbody>
     </table>
     <div class="pbBody">
-    <div class="pbSubsection" id="myTasks" href="<%= back_url_for({:action=>"my_tasks",:task_entry=>"{task_entry}",:back=>true}) %>">
+    <div class="pbSubsection" id="myTasks" href="<%= back_url_for({:controller=> "home", :action=>"my_tasks",:task_entry=>"{task_entry}",:back=>true}) %>">
       <%= render({:partial=>"irm/home/tasks",:locals=>{:tasks=>acts_as_tasks}}) %>
     </div>
     </div>
