--- a/app/views/irm/todo_tasks/portlet.html.erb
+++ b/app/views/irm/todo_tasks/portlet.html.erb
@@ -1,6 +1,1 @@
-<%= app_title %>
-<%= render "data_grid" %>
-
-<% content_for :sidebar do %>
-    <%= render :partial =>"/irm/common/recently_objects" %>
-<% end %>
+ <%= render({:partial=>"irm/home/my_tasks"}) %>
