修正知识库的portlet的标题为"我的知识库"

--- a/app/views/skm/entry_headers/portlet.html.erb
+++ b/app/views/skm/entry_headers/portlet.html.erb
@@ -5,7 +5,7 @@
           <tbody>
             <tr>
               <td class="pbTitle">
-                  <h3 class="lbHeader"><%=t(:label_skm) %></h3>
+                  <h3 class="lbHeader"><%=t(:label_skm_entry_header_portlet_title) %></h3>
               </td>
               <td id="topButtonRow" class="pbButton">
 
