feature: 在知识库首页列表“标题”一栏中，增加对视频知识的表示图标

--- a/public/themes/default/stylesheets/icons.ie6.css
+++ b/public/themes/default/stylesheets/icons.ie6.css
@@ -416,3 +416,9 @@ img.lookupIconOn {
     width: 16px;
     vertical-align: middle;
 }
+img.videoGeneral {
+    background-image: url("../images/16_16/video.png");
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+}
