--- a/app/views/skm/entry_headers/_data_grid.html.erb
+++ b/app/views/skm/entry_headers/_data_grid.html.erb
@@ -38,13 +38,21 @@
             <td>
                 <div id="entry_headers_list" class="datatable" style="width:100%">
                   <div id="id" style="display:none">
-                    <%= link_to(t(:edit),{:controller => "skm/entry_headers", :action=>"edit",:id=>"{id}"}) %>&nbsp;|
+                    <%= link_to(t(:edit),{:controller => "skm/entry_headers", :action=>"edit",:id=>"{id}"}) %>
                     <span class="display-<%= "{is_favorite}"%>">
-                        <%= link_to(t(:save_page), {:controller => "skm/entry_headers", :action => "add_favorites", :id => "{id}", :person_id => Irm::Person.current.id}) %>
+                        |&nbsp;<%= link_to(t(:save_page), {:controller => "skm/entry_headers", :action => "add_favorites", :id => "{id}", :person_id => Irm::Person.current.id}) %>
                     </span>
                   </div>
                   <div id="entry_title" style="display:none">
-                    <%= link_to("{entry_title}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
+                    var title = '<%= link_to("{entry_title}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>';
+                    if ('{type_code}' == 'VIDEO')
+                    {
+                        '<%= get_img_icon("video")%>' + title;
+                    }
+                    else
+                    {
+                        title;
+                    }
                   </div>
                   <div id="doc_number" style="display:none">
                     <%= link_to("{doc_number}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
@@ -53,9 +61,9 @@
                 <%= datatable("entry_headers_list",{:action=>"get_data",:column_id => @column_id, :format=>"json"},
                           [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
                            {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "150px"},
-                           {:key=>"entry_title",:label=>t(:label_skm_entry_header_title), :searchable => true,:formatter=>"Y.irm.template"},
+                           {:key=>"entry_title",:label=>t(:label_skm_entry_header_title), :searchable => true,:formatter=>"Y.irm.stemplate"},
                            {:key=>"doc_number",:label=>t(:label_skm_entry_header_doc_number), :searchable => true,:formatter=>"Y.irm.template",:width => "100px"},
-                           {:key=>"is_favorite", :hidden => true}],
+                           {:key=>"is_favorite", :hidden => true},{:key => "type_code", :hidden => true}],
                            {:search_box => "entryHeadersSearchBox",:html=>true, :paginator_box=>"entry_headers_list_paginator_box"})%>
                 <div id="entry_headers_list_paginator_box"></div>
             </td>
