--- a/public/themes/default/stylesheets/icons.css
+++ b/public/themes/default/stylesheets/icons.css
@@ -437,3 +437,9 @@ img.bookmarkGeneral {
     width: 16px;
     vertical-align: middle;
 }
+img.videoGeneral {
+    background-image: url("../images/16_16/video.png");
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+}
