--- a/app/views/skm/entry_headers/my_favorites.html.erb
+++ b/app/views/skm/entry_headers/my_favorites.html.erb
@@ -37,7 +37,15 @@
                     <%= link_to(t(:remove_from_favorite), {:controller => "skm/entry_headers", :action=>"remove_favorite",:person_id=>Irm::Person.current.id, :entry_header_id => "{id}"},:confirm => t(:label_are_you_sure)) %>
                   </div>
                   <div id="entry_title" style="display:none">
-                    <%= link_to("{entry_title}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
+                    var title = '<%= link_to("{entry_title}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>';
+                    if ('{type_code}' == 'VIDEO')
+                    {
+                        '<%= get_img_icon("video")%>' + title;
+                    }
+                    else
+                    {
+                        title;
+                    }
                   </div>
                   <div id="doc_number" style="display:none">
                     <%= link_to("{doc_number}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
@@ -46,7 +54,8 @@
                 <%= datatable("favorites_list",{:action=>"my_favorites_data",:column_id => @column_id,:format=>"json", :person_id => Irm::Person.current.id},
                           [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"60px"},
                            {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "130px"},
-                           {:key=>"entry_title",:label=>t(:label_skm_entry_header_title),:formatter=>"Y.irm.template"},
+                           {:key=>"entry_title",:label=>t(:label_skm_entry_header_title),:formatter=>"Y.irm.stemplate"},
+                           {:key=>"type_code", :hidden => true},
                            {:key=>"doc_number",:label=>t(:label_skm_entry_header_doc_number),:formatter=>"Y.irm.template", :width => "100px"},
                            ],{:html=>true, :paginator_box=>"favorites_list_paginator_box"})%>
                 <div id="favorites_list_paginator_box"></div>
