在首页使用jpolite

--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -42,6 +42,13 @@
                     </div>
                   </td>
                 </tr>
+                <tr>
+                  <td colspan="2">
+                    <div class="protlet">
+                      <%= render({:partial=>"irm/home/portal"}) %>
+                    </div>
+                  </td>
+                </tr>
             </tbody>
         </table>
   </div>
