修改jpolite库,当portlet不存在时,不添加该portlet到portal中

--- a/app/views/irm/home/_portal.html.erb
+++ b/app/views/irm/home/_portal.html.erb
@@ -4,7 +4,7 @@
   .dragging{
       border: 2px dashed;
       border-color: gray;
-      min-height: 150px;
+      min-height: 80px;
   }
 </style>
 <ul id="main_nav" style="display:none;">
@@ -36,8 +36,8 @@
 
 <script>
   var _modules= {
-      m101:{url:"licenses",	t:"Motivation"},
-	  m102:{url:"people",	t:"Philisophy"},
+      //m101:{url:"licenses",	t:"Motivation"},
+	  //m102:{url:"people",	t:"Philisophy"},
 	  m103:{url:"roles",	t:"Buzz"}
   }
   var _moduleLayout={t1:["m101:c1", "m102:c2", "m103:c3"]}
