--- a/app/views/irm/global_settings/_edit_form.html.erb
+++ b/app/views/irm/global_settings/_edit_form.html.erb
@@ -82,7 +82,7 @@
         </tbody>
       </table>
     </div>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
+    <div class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
         </span>
@@ -127,6 +127,48 @@
         </tbody>
       </table>
     </div>
+    <div class="pbSubheader first tertiaryPalette">
+      <span class="pbSubExtra">
+        <span class="requiredLegend">
+        </span>
+      </span>
+      <h3><%= t(:label_irm_global_setting_error_page_info) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol"><label><%=(@settings.query_by_code("ERROR_404").first[:name])%></label></td>
+              <td class="data2Col"><%= text_field_tag @settings.query_by_code("ERROR_404").first[:parameter_code],
+                                                      @settings.query_by_code("ERROR_404").first[:value],
+                                                      :jrequired => true%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(@settings.query_by_code("ERROR_500").first[:name])%></label></td>
+              <td class="data2Col"><%= text_field_tag @settings.query_by_code("ERROR_500").first[:parameter_code],
+                                                      @settings.query_by_code("ERROR_500").first[:value],
+                                                      :jrequired => true%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(@settings.query_by_code("ERROR_422").first[:name])%></label></td>
+              <td class="data2Col"><%= text_field_tag @settings.query_by_code("ERROR_422").first[:parameter_code],
+                                                      @settings.query_by_code("ERROR_422").first[:value],
+                                                      :jrequired => true%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(@settings.query_by_code("ERROR_ACCESS_DENY").first[:name])%></label></td>
+              <td class="data2Col"><%= text_field_tag @settings.query_by_code("ERROR_ACCESS_DENY").first[:parameter_code],
+                                                      @settings.query_by_code("ERROR_ACCESS_DENY").first[:value],
+                                                      :jrequired => true%>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
   </div>
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
