修改用户首页portal,添加模块显示功能

--- a/app/views/irm/home/_portal.html.erb
+++ b/app/views/irm/home/_portal.html.erb
@@ -36,12 +36,9 @@
 
 <script>
   var _modules= {
-      // m101:{url:"reports/portlet",	t:"Report"},
-	  //m102:{url:"reports/portlet",	t:"Report"},
-	  //m101:{url:"todo_tasks/portlet",	t:"TodoTask"},
       //m101:{url:"licenses",	t:"Motivation"},
 	  //m102:{url:"people",	t:"Philisophy"},
-	  m103:{url:"reports/portlet",	t:"Report"}
+	  m103:{url:"roles",	t:"Buzz"}
   }
   var _moduleLayout={t1:["m101:c1", "m102:c2", "m103:c3"]}
   var _columnLayout = {
