--- a/app/views/irm/home/_portal.html.erb
+++ b/app/views/irm/home/_portal.html.erb
@@ -35,12 +35,8 @@
 </div>
 
 <script>
-  var _modules= {
-      //m101:{url:"licenses",	t:"Motivation"},
-	  //m102:{url:"people",	t:"Philisophy"},
-	  m103:{url:"roles",	t:"Buzz"}
-  }
-  var _moduleLayout={t1:["m101:c1", "m102:c2", "m103:c3"]}
+  var _modules=window["eval"]("(" +'<%=portlets_json%>'+ ")");
+  var _moduleLayout=window["eval"]("(" +"<%=portlets_config%>"+ ")");
   var _columnLayout = {
 	_default: { bg:'normal',
 		        c1:'span-24 last',
@@ -49,5 +45,5 @@
 		        c4:'span-24 last'
 	           }
   };
-  initPortal();
+  initPortal({});
 </script>
