--- a/app/views/irm/portlets/_new_form.html.erb
+++ b/app/views/irm/portlets/_new_form.html.erb
@@ -49,7 +49,7 @@
             <tr>
               <td class="labelCol"><label for="portlet_controller"><%=t(:label_irm_portlet_controller)%></label></td>
               <td class="dataCol">
-                <%=f.select :controller, nullable_options_for_select(controllers.collect{|p| [p[:controller], p.controller]}, controllers),
+                <%=f.select :controller, nullable_options_for_select(available_all_controller.collect{|p| [p[:controller], p.controller]}, @portlet.controller),
                                             {},
                                             {:id=>"portlet_controller_id",
                                              :required=>true,
@@ -67,6 +67,7 @@
                                                     {},{:required=>true,
                                                         :id=>"portlet_action_id",
                                                         :href=>url_for(:controller=>"irm/portlets",:action=>"get_actions_options",:format=>"json",:controllers=>"${portlet_controller_id}"),
+                                                        :origin_value=>@portlet.action,
                                                         :depend=>"portlet_controller_id",
                                                         :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"}%>
               </td>
