--- a/app/views/irm/portal_layouts/_new_form.html.erb
+++ b/app/views/irm/portal_layouts/_new_form.html.erb
@@ -6,7 +6,7 @@
         <tr>
           <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_portal_layout)%></h2></td>
           <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
+            <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
           </td>
         </tr>
@@ -65,7 +65,7 @@
         <tr>
           <td class="pbTitle"></td>
           <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
+            <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
           </td>
         </tr>
