--- a/app/views/irm/home/_portal.html.erb
+++ b/app/views/irm/home/_portal.html.erb
@@ -75,7 +75,47 @@
 		        c4:'span-24 last'
 	           }
   };
-  initPortal({});
+  var portal_options, customNav = window.name;
+  switch(customNav) {
+     case	'1':	//Kwicks
+			//A little cusomization to the appearance of tabs, for production system, set it in CSS instead
+			$("li", "#main_nav").css({width:'90px', padding:0, textAlign:'center'});
+			portal_options = {
+				navInit:$.fn.kwicks,
+				navInitArguments:{max:130, spacing:5, sticky:true, event:'click'}
+			};
+			break;
+	case	'2':	//LavaLamp
+			//A little cusomization to the appearance of tabs, for production system, set it in CSS instead
+			$("li", "#main_nav").css({background:"transparent", border:0});
+			portal_options = {
+				navInit:$.fn.lavaLamp,
+				navInitArguments:{startItem:0, speed:800}
+			};
+			break;
+	default://3 or else - Traditional
+			portal_options = {navInit:TraditionalTabs};
+  }
+  portal_options.its =  "li, dd";
+  portal_options.layoutPersistence = [
+    function() {
+        return window["eval"]("(" + $.cookie('jpolite2layout') + ")")
+    },
+    function(portal_options) {
+        //通过ajax保存配置信息至数据库
+        $.ajax({
+          type: 'POST',
+          url: '/portlet_configs/save_portal_config',
+          data: {portal_config: portal_options},
+          dataType: 'json',
+          success: function(data) { },
+          error: function() {}
+        });
+        //设置portal 配置到cookie
+        return $.cookie('jpolite2layout', portal_options);
+    }
+  ]
+  initPortal(portal_options);
   $(function(){
       $("#portalSetting").click(function(e){
           $.colorbox({inline:true, opacity:0.55, title:"<%= t(:label_irm_portlet_custom_home_page) %>", speed: 0,href:"#portletList"});
