--- a/app/views/irm/home/_portal.html.erb
+++ b/app/views/irm/home/_portal.html.erb
@@ -10,7 +10,8 @@
       visibility: hidden;
   }
 </style>
-<% pconfig = portal_configs %>
+<% portlets = my_portlets %>
+<% pconfig = portal_configs(portlets) %>
 <ul id="main_nav" style="display:none;">
    <li id="t1"><b class="hover">homePage</b></li>
 </ul>
@@ -37,7 +38,7 @@
 	</div>
 </div>
 
-<% portlets = my_portlets %>
+
 <div style="display:none;">
     <div id="portletList" style="background-color: transparent; width: 300px; height:160px;padding: 30px 10px 10px 10px;">
       <table id="modules" style="font-size:12px;width:100%;">
